welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: object Abs is not a member of package math
	var ab=math.Abs(a-b);var bc=math.Abs(b-c);var ac=math.Abs(a-c);
                    ^lessBy10:2: error: object Abs is not a member of package math
	var ab=math.Abs(a-b);var bc=math.Abs(b-c);var ac=math.Abs(a-c);
                                         ^lessBy10:2: error: object Abs is not a member of package math
	var ab=math.Abs(a-b);var bc=math.Abs(b-c);var ac=math.Abs(a-c);
                                                              ^