welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
	var ab=math.Abs(a-b);var bc=math.Abs(b-c);var ac=math.Abs(a-c);
	if (ab<10 && bc<10 && ac<10) {
		return false
	}else {
		return true
	}
}
